Fix align-items contact form

--- a/src/app/components/contact-module/contact-form/contact-form.component.scss
+++ b/src/app/components/contact-module/contact-form/contact-form.component.scss
@@ -2,7 +2,7 @@
 
 .contact-form {
     @include flex(column, center, center, 2rem);
-    @include mobile-portrait {
+    @include tablet {
         align-items: flex-end;
     }
     &__field {
